<resources>
    <string name="app_name">Job4j Exam</string>
    <string name="domain_prompt">Выберите область</string>
    <string name="hello">Hello, Petr Arsentev</string>
    <string name="exp_date">Дата проведения испытания</string>
    <string name="RadioButton">RadioButton</string>
    <string name="RadioButton1">RadioButton</string>
    <string name="RadioButton2">RadioButton</string>
    <string name="RadioButton3">RadioButton</string>
    <string name="button_previous">Назад</string>
    <string name="button_next">Вперед</string>
    <string name="city">Город</string>
    <string name="date">Дата</string>
    <string name="obj_name">Имя объекта</string>
    <string name="address">Улица и дом</string>
    <string name="full_name">Ф.И.О.</string>
    <string name="temperature">Температура воздуха</string>
    <string name="humidity">Влажность воздуха</string>
    <string name="pressure">Атмосферное давление</string>
    <string name="report_number">Номер отчета</string>
    <string name="button_hint">Подсказка</string>
    <string name="message_text">Текст сообщения</string>
    <string name="save_button">Сохранить</string>
    <string name="date_picker_title">Дата</string>
    <string name="add_item">Сохранить</string>
    <string name="delete_item">Дата</string>


    <string-array name="domain_arrays">
        <item>Выберите область</item>
        <item>Московская</item>
        <item>СПб</item>
    </string-array>
    <string-array name="exp_array">
        <item>Выберите дату</item>
        <item>23.10.2019</item>
        <item>24.10.2019</item>
        <item>25.10.2019</item>
    </string-array>
</resources>
